--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar bg-dark form-inline">
         <div class="container-fluid responsive"></div>
         <img alt="IMAGE" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRTFSIO_dsJJiOX3Sntwxpw6lUIJKI0ueBlRpcQ3q57xVOw4-bCAQ2eX0v_5v2sf5CIiNA&usqp=CAU" class="rounded-circle" width="40" height="40" />
-        <a class="navbar-brand mx-auto text-white font-weight-light" href="https://github.com/">GITHUB</a>
+        <a class="navbar-brand mx-auto text-white font-weight-light" href="https://github.com/signup?ref_cta=Sign+up&ref_loc=header+logged+out&ref_page=%2F&source=header-home">GITHUB</a>
     </nav>
     </div>
 
